deploy/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: provisioner
  name: provisioner
  namespace: provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provisioner
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: provisioner
    spec:
      serviceAccountName: order-meow-provisioner
      containers:
        - name: provisioner
          image: bennerv/saas-provisioner:0.2.0
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
      volumes:
        - name: config-volume
          configMap:
            name: saas-files
status: {}
