deploy/07-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: provisioner-ui
  name: provisioner-ui
  namespace: provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provisioner-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: provisioner-ui
    spec:
      serviceAccountName: order-meow-provisioner-ui
      containers:
        - name: provisioner-ui
          image: bennerv/provisioning-ui:0.1.0
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
status: {}
