deploy/06-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: provisioner
  name: order-meow-provisioner-ui
  labels:
    app: provisioner-ui
spec:
  type: ClusterIP
  ports:
    - name: provisioner-ui
      port: 3000
  selector:
    app: provisioner-ui
