deploy/05-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: provisioner
  namespace: provisioner
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: provisioner.info
      http:
        paths:
          - path: /
            backend:
              serviceName: order-meow-provisioner
              servicePort: 8080
